<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/main_title"
            android:textColor="@color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_textview_size"
            android:gravity="center"
            android:text="@string/main_margin_textview_joueurs1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_joueur1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_joueur_1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_joueur1_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="@dimen/Textsize_NomJoueurs_Main" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_textview_size"
            android:gravity="center"
            android:text="@string/main_margin_textview_joueurs2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_joueur2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_joueur_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_joueur2_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margintop_relativelayout">

            <Button
                android:id="@+id/main_calculer_filledButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:text="@string/main_boutton_Start" />

            <Button
                android:id="@+id/main_quitter_filledButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="305dp"
                android:text="@string/main_boutton_quitter" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>