<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_parametres"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                android:background="@color/purple_500"
                android:gravity="center"
                android:text="@string/Parametres"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_textview_size"
                android:gravity="center"
                android:text="@string/textParamTailleNomsJoueurs" />

            <SeekBar
                android:id="@+id/ScrollTailleNomJoueurs"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="50dp"
                android:max="50"
                android:progress="20"
                android:thumbTint="@color/purple_500" />

        </LinearLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margintop_relativelayout">

        <Button
            android:id="@+id/param_bt_valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/bt_valider" />

        <Button
            android:id="@+id/param_bt_annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="305dp"
            android:text="@string/bt_annuler" />

    </RelativeLayout>

</LinearLayout>
